RESOLVED FIXED237626
Fix assertion when DOM Rendering in GPU Process is enabled with accelerated drawing disabled
https://bugs.webkit.org/show_bug.cgi?id=237626
Summary Fix assertion when DOM Rendering in GPU Process is enabled with accelerated d...
Simon Fraser (smfr)
Reported 2022-03-08 15:55:49 PST
Fix assertion when DOM Rendering in GPU Process is enabled with accelerated drawing disabled
Attachments
Patch (1.65 KB, patch)
2022-03-08 15:57 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-03-08 15:57:40 PST
Radar WebKit Bug Importer
Comment 2 2022-03-08 17:24:51 PST
EWS
Comment 3 2022-03-08 22:21:02 PST
Committed r291031 (248205@main): <https://commits.webkit.org/248205@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454167 [details].
Note You need to log in before you can comment on or make changes to this bug.