Fix assertion when DOM Rendering in GPU Process is enabled with accelerated drawing disabled https://bugs.webkit.org/show_bug.cgi?id=237626

Reviewed by Tim Horton.

Override releaseGraphicsContext() in the base class (which asserts). This subclass
doesn't need to do anything; releaseGraphicsContext() is only relevant for IOSurface-
based backends.

* WebProcess/GPU/graphics/ImageBufferShareableBitmapBackend.h:



Canonical link: https://commits.webkit.org/248205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291031 268f45cc-cd09-0410-ab3c-d52691b4dbfc